// Code generated by protoc-gen-go-cosmos-orm-proto. DO NOT EDIT.
syntax = "proto3";
package testpb;

import "cosmos/base/query/v1beta1/pagination.proto";
import "google/protobuf/timestamp.proto";
import "testpb/test_schema.proto";

service TestSchemaQuery {
  rpc GetExampleTable (GetExampleTableRequest) returns (GetExampleTableResponse) {}
  rpc GetExampleTableByU64Str (GetExampleTableByU64StrRequest) returns (GetExampleTableByU64StrResponse) {}
  rpc ListExampleTable (ListExampleTableRequest) returns (ListExampleTableResponse) {}
  rpc GetExampleAutoIncrementTable (GetExampleAutoIncrementTableRequest) returns (GetExampleAutoIncrementTableResponse) {}
  rpc GetExampleAutoIncrementTableByX (GetExampleAutoIncrementTableByXRequest) returns (GetExampleAutoIncrementTableByXResponse) {}
  rpc ListExampleAutoIncrementTable (ListExampleAutoIncrementTableRequest) returns (ListExampleAutoIncrementTableResponse) {}
  rpc GetExampleSingleton (GetExampleSingletonRequest) returns (GetExampleSingletonResponse) {}
  rpc GetExampleTimestamp (GetExampleTimestampRequest) returns (GetExampleTimestampResponse) {}
  rpc ListExampleTimestamp (ListExampleTimestampRequest) returns (ListExampleTimestampResponse) {}
  rpc GetSimpleExample (GetSimpleExampleRequest) returns (GetSimpleExampleResponse) {}
  rpc GetSimpleExampleByUnique (GetSimpleExampleByUniqueRequest) returns (GetSimpleExampleByUniqueResponse) {}
  rpc ListSimpleExample (ListSimpleExampleRequest) returns (ListSimpleExampleResponse) {}
  rpc GetExampleAutoIncFieldName (GetExampleAutoIncFieldNameRequest) returns (GetExampleAutoIncFieldNameResponse) {}
  rpc ListExampleAutoIncFieldName (ListExampleAutoIncFieldNameRequest) returns (ListExampleAutoIncFieldNameResponse) {}
}

message GetExampleTableRequest {
  uint32 u32 = 1;
  int64 i64 = 2;
  string str = 3;
}

message GetExampleTableResponse {
  ExampleTable value = 1;
}

message GetExampleTableByU64StrRequest {
  uint64 u64 = 1;
  string str = 2;
}

message GetExampleTableByU64StrResponse {
  ExampleTable value = 1;
}

message ListExampleTableRequest {
  message IndexKey {
    message U32I64Str {
      uint32 u32 = 1;
      int64 i64 = 2;
      string str = 3;
    }
    
    message U64Str {
      uint64 u64 = 1;
      string str = 2;
    }
    
    message StrU32 {
      string str = 1;
      uint32 u32 = 2;
    }
    
    message BzStr {
      bytes bz = 1;
      string str = 2;
    }
    
    oneof index {
      U32I64Str u_32_i_64_str = 1;
      U64Str u_64_str = 2;
      StrU32 str_u_32 = 3;
      BzStr bz_str = 4;
    }
  }
  
  message RangeQuery {
    IndexKey from = 1;
    IndexKey to = 2;
  }
  
  oneof query {
    IndexKey prefix_query = 1;
    RangeQuery range_query = 2;
  }
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message ListExampleTableResponse {
  repeated ExampleTable values = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message GetExampleAutoIncrementTableRequest {
  uint64 id = 1;
}

message GetExampleAutoIncrementTableResponse {
  ExampleAutoIncrementTable value = 1;
}

message GetExampleAutoIncrementTableByXRequest {
  string x = 1;
}

message GetExampleAutoIncrementTableByXResponse {
  ExampleAutoIncrementTable value = 1;
}

message ListExampleAutoIncrementTableRequest {
  message IndexKey {
    message Id {
      uint64 id = 1;
    }
    
    message X {
      string x = 1;
    }
    
    oneof index {
      Id id = 1;
      X x = 2;
    }
  }
  
  message RangeQuery {
    IndexKey from = 1;
    IndexKey to = 2;
  }
  
  oneof query {
    IndexKey prefix_query = 1;
    RangeQuery range_query = 2;
  }
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message ListExampleAutoIncrementTableResponse {
  repeated ExampleAutoIncrementTable values = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message GetExampleSingletonRequest {}

message GetExampleSingletonResponse {
  ExampleSingleton value = 1;
}

message GetExampleTimestampRequest {
  uint64 id = 1;
}

message GetExampleTimestampResponse {
  ExampleTimestamp value = 1;
}

message ListExampleTimestampRequest {
  message IndexKey {
    message Id {
      uint64 id = 1;
    }
    
    message Ts {
      google.protobuf.Timestamp ts = 1;
    }
    
    oneof index {
      Id id = 1;
      Ts ts = 2;
    }
  }
  
  message RangeQuery {
    IndexKey from = 1;
    IndexKey to = 2;
  }
  
  oneof query {
    IndexKey prefix_query = 1;
    RangeQuery range_query = 2;
  }
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message ListExampleTimestampResponse {
  repeated ExampleTimestamp values = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message GetSimpleExampleRequest {
  string name = 1;
}

message GetSimpleExampleResponse {
  SimpleExample value = 1;
}

message GetSimpleExampleByUniqueRequest {
  string unique = 1;
}

message GetSimpleExampleByUniqueResponse {
  SimpleExample value = 1;
}

message ListSimpleExampleRequest {
  message IndexKey {
    message Name {
      string name = 1;
    }
    
    message Unique {
      string unique = 1;
    }
    
    oneof index {
      Name name = 1;
      Unique unique = 2;
    }
  }
  
  message RangeQuery {
    IndexKey from = 1;
    IndexKey to = 2;
  }
  
  oneof query {
    IndexKey prefix_query = 1;
    RangeQuery range_query = 2;
  }
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message ListSimpleExampleResponse {
  repeated SimpleExample values = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message GetExampleAutoIncFieldNameRequest {
  uint64 foo = 1;
}

message GetExampleAutoIncFieldNameResponse {
  ExampleAutoIncFieldName value = 1;
}

message ListExampleAutoIncFieldNameRequest {
  message IndexKey {
    message Foo {
      uint64 foo = 1;
    }
    
    oneof index {
      Foo foo = 1;
    }
  }
  
  message RangeQuery {
    IndexKey from = 1;
    IndexKey to = 2;
  }
  
  oneof query {
    IndexKey prefix_query = 1;
    RangeQuery range_query = 2;
  }
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message ListExampleAutoIncFieldNameResponse {
  repeated ExampleAutoIncFieldName values = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

